added ProductListCtrl.ts in project with initial properties

--- a/AngularWithTypeScript/index.html
+++ b/AngularWithTypeScript/index.html
@@ -23,10 +23,11 @@
     <script src="scripts/angular-mocks.js"></script>
     <script src="scripts/angular-route.js"></script>
 
-<!-- Application Script -->
+    <!-- Application Script -->
     <script src="app.js"></script>
     <!-- Domain Classes -->
     <!-- Services -->
     <!-- Controllers -->
+    <script src="app/products/productListCtrl.js"></script>
 </body>
 </html>
