added interface for the product entity

--- a/AngularWithTypeScript/index.html
+++ b/AngularWithTypeScript/index.html
@@ -26,6 +26,7 @@
     <!-- Application Script -->
     <script src="app.js"></script>
     <!-- Domain Classes -->
+    <script src="app/products/product.js"></script>
     <!-- Services -->
     <!-- Controllers -->
     <script src="app/products/productListCtrl.js"></script>
